AppStore/V1.0.0/Set-Up.md
# App Store Connect Initial Setup — Watch My Calories v1.0.0

**Date: 2026-03-08**

All the content you need to fill in App Store Connect for your first submission.

---

## 1. App Information

| Field | Value |
|-------|-------|
| **App Name** | Watch My Calories |
| **Subtitle** | Snap, Track, Stay Fit with AI |
| **Bundle ID** | `com.pning80.WatchMyCalories` |
| **SKU** | `watch-my-calories-ios-001` |
| **Primary Category** | Health & Fitness |
| **Secondary Category** | Food & Drink |
| **Primary Language** | English (U.S.) |
| **Copyright** | © 2026 Peng Ning |

### Content Rights

- Does your app contain, show, or access third-party content? **No**

### Age Rating Questionnaire

Answer **None** / **No** to all questions:

| Question | Answer |
|----------|--------|
| Cartoon or Fantasy Violence | None |
| Realistic Violence | None |
| Prolonged Graphic or Sadistic Realistic Violence | None |
| Profanity or Crude Humor | None |
| Mature/Suggestive Themes | None |
| Horror/Fear Themes | None |
| Medical/Treatment Information | None |
| Simulated Gambling | None |
| Unrestricted Web Access | No |
| Gambling with Real Currency | No |

**Expected Rating**: 4+ (all ages)

---

## 2. Version Information

### App Description

> Track your daily calories effortlessly with AI-powered food recognition. Simply snap a photo of your meal and Watch My Calories instantly identifies each food item, estimates portions in familiar US units, and calculates calories and macronutrients.
>
> KEY FEATURES
>
> - AI Food Analysis — Snap a photo of your meal. Watch My Calories uses Google Gemini AI to identify foods and estimate calories, protein, carbs, and fat.
> - Smart Meal Tracking — Entries are automatically categorized as Breakfast, Lunch, Dinner, or Snack based on the time of day.
> - Daily Dashboard — See your calorie intake at a glance with a visual progress card showing how close you are to your daily goal.
> - HealthKit Integration — Reads your active energy burned from Apple Health to dynamically adjust your effective calorie target.
> - Personalized Goals — Set your profile (height, weight, age, activity level) and the app calculates a recommended daily calorie target using the Mifflin-St Jeor formula.
> - Meal History — Browse all past entries organized by date and meal type. View, edit, or delete individual items or entire meal groups.
> - Manual Entry — Prefer to log food yourself? Add entries manually with full control over name, calories, and macros.
> - Privacy First — All your food and health data stays on your device. No accounts, no sign-ups. Food photos are sent to Google Gemini solely for analysis and are not stored. The app is supported by ads served via Google AdMob.
>
> Watch My Calories is designed for anyone who wants a simple, private, and intelligent way to stay on top of their nutrition.

### Promotional Text

> Stop guessing and start tracking! Snap a photo of your meal for instant AI calorie estimates. Private, fast, and synced with your fitness goals.

*(Promotional text can be updated without a new app version.)*

### Keywords

```
calorie,tracker,food,AI,nutrition,macro,health,diet,meal,camera,fitness,weight,protein,carbs
```

*(100 characters max, comma-separated, no spaces after commas.)*

### What's New in This Version

> - Enhanced security with Apple App Attest for secure backend communication
> - Improved camera experience with faster startup and better image framing
> - Smoother onboarding flow with keyboard handling fixes
> - Added non-intrusive banner and native ads to support continued development
> - Various bug fixes and stability improvements

### Support URL

> https://gist.github.com/pning80/7dc8a85c83edcc03845d182386cab470

### Marketing URL

> *(Optional — leave blank or provide a landing page URL.)*

---

## 3. Screenshots & App Previews

### Format & Limits

- **Formats**: `.jpeg`, `.jpg`, `.png`
- **Quantity**: 1–10 screenshots per localized listing
- **App previews** (optional): Up to 3 per localization, 15–30 seconds, `.mov`/`.mp4`/`.m4v`, max 500 MB. Dimensions must match the corresponding screenshot size for that device.

### Required Screenshot Sizes

You only need to provide screenshots for the **largest device size** per device family. App Store Connect automatically scales them down for smaller sizes.

#### iPhone (required — provide one of these)

| Display | Devices | Portrait (px) | Landscape (px) |
|---------|---------|---------------|-----------------|
| **6.9"** | iPhone 16 Pro Max | 1320 × 2868 | 2868 × 1320 |
| **6.5"** | iPhone XS Max, 11 Pro Max | 1242 × 2688 | 2688 × 1242 |

> Either 6.9" or 6.5" is required. Apple auto-scales for 6.7", 6.1", 5.8", 5.5", and smaller.

#### iPhone (optional — only if you want device-specific screenshots)

| Display | Devices | Portrait (px) | Landscape (px) |
|---------|---------|---------------|-----------------|
| **6.7"** | iPhone 16 Plus, 15 Pro Max, 15 Plus, 14 Pro Max | 1290 × 2796 | 2796 × 1290 |
| **6.1"** | iPhone XR, 11 | 828 × 1792 | 1792 × 828 |
| **5.8"** | iPhone X, XS, 11 Pro | 1125 × 2436 | 2436 × 1125 |
| **5.5"** | iPhone 8 Plus, 7 Plus, 6s Plus | 1242 × 2208 | 2208 × 1242 |
| **4.7"** | iPhone 8, 7, 6s, SE (3rd/2nd gen) | 750 × 1334 | 1334 × 750 |
| **4"** | iPhone SE (1st gen), 5s | 640 × 1136 | 1136 × 640 |

#### iPad (required if app runs on iPad)

| Display | Devices | Portrait (px) | Landscape (px) |
|---------|---------|---------------|-----------------|
| **13"** | iPad Pro (M5/M4), iPad Air (M4/M3/M2) | 2064 × 2752 | 2752 × 2064 |
| **13" (alt)** | iPad Pro (6th–1st gen) | 2048 × 2732 | 2732 × 2048 |

> Either 13" size is accepted. Apple auto-scales for 11", 10.5", and 9.7".

### Current Screenshots (`AppStore/Screenshots/`)

All screenshots are **1242 × 2688** (iPhone 6.5" portrait):

| File | Screen |
|------|--------|
| `Onboarding-1.png` | Onboarding — Welcome screen |
| `Onboarding-2.png` | Onboarding — Profile setup |
| `Onboarding-3.png` | Onboarding — Goals & calorie target |
| `Onboarding-4.png` | Onboarding — Permissions |
| `Dashboard.png` | Dashboard — daily summary (light) |
| `Dashboard-Dark.png` | Dashboard — daily summary (dark) |
| `Camera-Scan.png` | Camera scan view |
| `Analysis-in-progress.png` | AI analysis in progress |
| `Analysis-Result.png` | AI analysis results |
| `Meal-History.png` | Meal history (light) |
| `Meal-History-Dark.png` | Meal history (dark) |
| `Settings.png` | Settings / profile (light) |
| `Settings-Dark.png` | Settings / profile (dark) |
| `View-Meal.png` | Individual meal detail view |

**Tips:**
- Light mode screenshots are generally preferred as lead images for the App Store listing.
- Dark mode variants are included for optional use or marketing materials.
- You can add text overlays and frames using tools like [Shotbot](https://shotbot.io) or [Screenshots Pro](https://screenshots.pro).

*Reference: [Apple Screenshot Specifications](https://developer.apple.com/help/app-store-connect/reference/screenshot-specifications/)*

---

## 4. Privacy Details (App Privacy "Nutrition Labels")

App Store Connect requires you to disclose all data your app collects. Fill in as follows:

### Data Types Collected

#### 1. Health & Fitness

| Field | Value |
|-------|-------|
| **Data Type** | Health — Active Energy Burned |
| **Collection** | Yes |
| **Usage Purpose** | App Functionality |
| **Linked to User's Identity** | No |
| **Used for Tracking** | No |

#### 2. Photos or Videos

| Field | Value |
|-------|-------|
| **Data Type** | Photos |
| **Collection** | Yes |
| **Usage Purpose** | App Functionality |
| **Linked to User's Identity** | No |
| **Used for Tracking** | No |

*Note: Food photos are sent to Google Gemini AI for analysis. Only the first photo per meal is stored locally on-device. Photos are not stored on the server.*

#### 3. Body — Height, Weight

| Field | Value |
|-------|-------|
| **Data Type** | Body — Height and Weight |
| **Collection** | Yes |
| **Usage Purpose** | App Functionality |
| **Linked to User's Identity** | No |
| **Used for Tracking** | No |

*Note: User-entered profile data used for BMR/calorie goal calculation. Stored only on-device.*

#### 4. Device ID (collected by Google AdMob SDK)

| Field | Value |
|-------|-------|
| **Data Type** | Identifiers — Device ID |
| **Collection** | Yes |
| **Usage Purpose** | Third-Party Advertising |
| **Linked to User's Identity** | No |
| **Used for Tracking** | No |

*Note: Google AdMob may collect device identifiers for ad serving and measurement. This data is handled by Google's SDK and is not accessed by the app itself.*

#### 5. Advertising Data (collected by Google AdMob SDK)

| Field | Value |
|-------|-------|
| **Data Type** | Usage Data — Advertising Data |
| **Collection** | Yes |
| **Usage Purpose** | Third-Party Advertising |
| **Linked to User's Identity** | No |
| **Used for Tracking** | No |

*Note: Ad interaction data (impressions, taps) collected by the AdMob SDK for ad performance measurement.*

#### 6. Diagnostics (collected by Google AdMob SDK)

| Field | Value |
|-------|-------|
| **Data Type** | Diagnostics — Performance Data |
| **Collection** | Yes |
| **Usage Purpose** | Third-Party Advertising |
| **Linked to User's Identity** | No |
| **Used for Tracking** | No |

*Note: The AdMob SDK may collect performance and crash diagnostics related to ad rendering.*

### Data NOT Collected

Confirm that the following are **not collected**:

- Contact Info (name, email, phone)
- Location
- Contacts
- User Content (other than photos)
- Identifiers (user ID) — *Device ID is collected by AdMob; see above*
- Browsing History
- Search History
- Purchases
- Financial Info
- Sensitive Info

### Privacy Policy URL

> https://gist.github.com/pning80/fc4cc0aab367f96202371566241ec7cb

---

## 5. App Review Notes

Paste this into the **Notes for Review** field:

> **No login or account required.** The app works entirely on-device with no sign-up.
>
> **Camera access required:** The core feature is scanning food with the camera. On launch, the app requests camera permission. Please grant camera access to test food scanning. Point the camera at any food or food image, take a photo, and tap "Use Photo" to start AI analysis.
>
> **HealthKit access:** The app requests permission to read Active Energy Burned from Apple Health. This is optional — the app works without it, but the daily calorie goal adjusts based on activity data when granted.
>
> **Network dependency:** Food analysis requires an internet connection. The app sends food photos to a backend service that uses Google Gemini AI for nutritional analysis. If the device is offline, analysis will fail with an error message.
>
> **Demo flow:**
> 1. Open the app → Complete 4-step onboarding (Welcome → Profile → Goals → Permissions) → Dashboard tab shows daily summary
> 2. Tap the Camera tab → grant camera permission → take a photo of food → tap "Use Photo"
> 3. The app automatically analyzes the photo and displays estimated food items, calories, and macros → tap "Done" to save
> 4. Return to Dashboard to see the logged entry
> 5. Tap History tab to view past entries
> 6. Tap Settings tab to enter profile data and see the calculated calorie goal

### Review Contact Information

| Field | Value |
|-------|-------|
| **First Name** | *(your first name)* |
| **Last Name** | *(your last name)* |
| **Email** | pning80.git@gmail.com |
| **Phone** | *(your phone number)* |

### Sign-In Required

**No** — no login or demo credentials needed.

---

## 6. Export Compliance

When prompted about export compliance:

| Question | Answer |
|----------|--------|
| Does your app use encryption? | **Yes** |
| Does your app qualify for any exemptions? | **Yes** |
| Exemption type | The app only uses HTTPS (TLS/SSL) for network communication — it does not contain custom encryption. Select: **"Uses encryption exempt from EAR"** and check **"The app only uses standard encryption protocols (HTTPS, TLS)"** |

No CCATS or ERN number is needed. Apple's standard HTTPS exemption applies.


---

## 7. Build Upload

Before submitting for review, upload a build via Xcode:

1. In Xcode: **Product → Archive**
2. In the Organizer window: select the archive → **Distribute App → App Store Connect**
3. Follow the wizard (automatic signing recommended)
4. Wait for the build to finish processing in App Store Connect (~10–30 minutes)
5. Select the build in your App Store Connect version page

---

## 8. Pricing & Availability

| Field | Value |
|-------|-------|
| **Price** | Free (or set your price) |
| **Availability** | All territories (or select specific countries) |
| **Pre-Order** | No |

---

## 9. Submission Checklist

Complete these items before clicking **Submit for Review**:

### Must Do (Blockers)

- [x] **Privacy Policy URL** — https://gist.github.com/pning80/fc4cc0aab367f96202371566241ec7cb
- [x] **Support URL** — https://gist.github.com/pning80/7dc8a85c83edcc03845d182386cab470
- [x] **Screenshots** — 14 screenshots taken (light/dark variants, onboarding, analysis, meal detail). See Section 3.
- [x] **App Icon** — 1024×1024 icon is in the Xcode asset catalog (`AppIcon.png` also copied to `AppStore/`).
- [ ] **Upload Build** — Archive and upload via Xcode (see Section 7).
- [ ] **Select Build** — Choose the uploaded build in App Store Connect.
- [ ] **Fill in Privacy Details** — Complete the App Privacy section (see Section 4).
- [x] **Export Compliance** — `ITSAppUsesNonExemptEncryption = NO` added to Xcode project build settings.
- [x] **NSHealthUpdateUsageDescription** — Required by App Store validation even though the app only reads HealthKit. Added with message: "This app does not write data to Apple Health."
- [ ] **Review Contact Info** — Add your name, email (pning80.git@gmail.com), and phone for App Review.

### Recommended

- [x] **Add `ITSAppUsesNonExemptEncryption = NO`** to Info.plist — Done.
- [ ] **Test on a physical device** — Verify camera, HealthKit, and network analysis all work before submitting.
- [ ] **Test the "no HealthKit" path** — Deny HealthKit permission and verify the app still works without crashing.
- [ ] **Test offline behavior** — Verify the app shows an appropriate error when food analysis is attempted without internet.
- [ ] **Proofread description and keywords** — Check for typos and ensure keywords are relevant.

---

## Quick Reference — App Store Connect Fields Map

| App Store Connect Section | Where to Find Content |
|--------------------------|----------------------|
| App Information → Name, Subtitle, Categories | Section 1 |
| App Information → Content Rights | Section 1 |
| App Information → Age Rating | Section 1 |
| Version → Description | Section 2 |
| Version → Promotional Text | Section 2 |
| Version → Keywords | Section 2 |
| Version → What's New | Section 2 |
| Version → Support URL | Section 2 (you must provide) |
| Version → Screenshots | Section 3 |
| App Privacy | Section 4 |
| App Review → Notes | Section 5 |
| App Review → Sign-In Required | Section 5 |
| App Review → Contact Info | Section 5 |
| Export Compliance | Section 6 |
| Pricing & Availability | Section 8 |
